Change nav to fixed position, add extra padding on ui-view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,6 +24,11 @@
 @import 'colorpicker';
 
 
+/* Global styles */
+.view-container {
+	padding-top: 50px;
+}
+
 * {
     font-family: $font-family;
 }
